@@ -24,14 +24,10 @@ Copyright_License {
 #ifndef XCSOAR_TRACKING_SKYLINES_FEATURES_HPP
 #define XCSOAR_TRACKING_SKYLINES_FEATURES_HPP
 
-#ifndef _WIN32_WCE
-
 #define HAVE_SKYLINES_TRACKING
 
 #ifdef HAVE_POSIX
 #define HAVE_SKYLINES_TRACKING_HANDLER
-#endif
-
 #endif
 
 #endif
